--- a/src/main/resources/static/layuiadmin/tpl/system/about.html
+++ b/src/main/resources/static/layuiadmin/tpl/system/about.html
@@ -2,7 +2,7 @@
 <div class="layui-card-header">版本信息</div>
 <div class="layui-card-body layui-text layadmin-about">
   <script type="text/html" template>
-    <p>当前版本：xingying 2.0</p>
+    <p>当前版本：dabaixiucheng 2.0</p>
     <p>基于框架：</p>
     <p>前台主要使用Layui,BootStrap</p>
     <p>后台台主要使用String Boot、Spring Data、Spring security</p>
